# ai-facultate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  INSTALL_CLIENT.md  LICENSE  README.md  SECURITY.md  START_AI_STUDY_ASSISTANT.bat  START_CLOUDFLARE_TUNNEL.bat  START_PUBLIC_TAILSCALE.bat  START_SERVER.bat  api_server.py  app.py  build_client.bat  build_copilot_facultate.bat  build_desktop_client.bat  build_server_launcher.bat  client.py  deployment.py  install.ps1  manage_users.py  pyproject.toml  request_queue.py  requirements-client.txt  requirements.txt  run_app.ps1  server_network_diagnostics.ps1  start_client.bat  start_cloudflare_tunnel.ps1  start_public_tailscale.ps1  start_server.bat  study_memory.py  user_accounts.py
.github/: pull_request_template.md
apps/: README.md  __init__.py
client_app/: __init__.py  launcher.py  main.py
deploy/: cloudflared-config.example.yml  nginx.example.conf
deployment/: Caddyfile.example
desktop_app/: CoPilotFacultate.iss  __init__.py  launcher.py
desktop_client/: FacultyCopilot.iss  README.md  __init__.py  launcher.py
docs/: ARCHITECTURE.md  CHAT_UX_CHECKLIST.md  CLIENT.md  CLIENT_LEGACY.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_LEGACY.md  INSTALLATION.md  RELEASES.md  REPOSITORY_AUDIT.md  REPOSITORY_CLEANUP.md  SERVER.md  TROUBLESHOOTING.md
screenshots/: README.md
scripts/: benchmark_factual_reliability.py
server/: README.md  __init__.py
server_launcher/: __init__.py  launcher.py
tests/: test_answer_modes.py  test_api_answer_modes.py  test_conversations.py  test_deployment.py  (+19 more)
(+43 files in other folders)
